--- a/src/app/board-manager/board-manager/board-manager.component.html
+++ b/src/app/board-manager/board-manager/board-manager.component.html
@@ -1,1 +1,5 @@
-<p>board-manager works!</p>
+<mat-card *ngIf="boardManager$">
+id:{{(boardManager$ | async).id}}
+{{(boardManager$ | async).name}}
+
+</mat-card>
